# konnektoren-yew

./: .gitignore  Cargo.toml  README.md  Trunk.toml  build.rs  catalog.html  index-199f95e30a0977f6.css  index-27446cadea77b6a0.css  index-2cf0842b64e11714.css  index-2f956c5cbbccd127.css  index-31488a95079303b7.css  index-38d3b262a216c010.css  index-39b770accff534af.css  index-40c9a1c018d53193.css  index-5947aa948d00e93d.css  index-5a56de36a50d6c86.css  index-670202efa39255ef.css  index-67054e4340275969.css  index-687438b860db1498.css  index-73ac98b8d1c4b119.css  index-76a7b58de71789bb.css  index-7ee126006bbc1779.css  index-7ee18e8a7bd10d5a.css  index-7f9998191793e369.css  index-85f82b6cff29c33f.css  index-8715022622f57981.css  index-87c38a3c089f40ce.css  index-89163e8d72d7476c.css  index-8995c23d348ac660.css  index-8e76201b14a63f4a.css  index-8f26056e87172643.css  index-a30fdfad75b399c7.css  index-a41023064b31fb9c.css  index-a8e3f67d0104ac06.css  index-b34e914ca23ca7ee.css  index-c0d29f56e126388f.css  index-c678cf3dd5c58b87.css  index-cb9ba40742efe53.css  index-cf4507f45875f996.css  index-cfa83d4cfd37f5b7.css  (+218 more)
.github/workflows/: gh-pages.yml  i18n.yml  stylelint.yml
assets/: articles.md  faqs.yml  inbox.yml
assets/i18n/: ar.json  cn.json  de.json  en.json  es.json  i18n.yml  pl.json  tr.json  ua.json  uk.json  vi.json  zh.json
scripts/: i18n_report.sh
scss/: .stylelintignore  .stylelintrc.json  _konnektoren.scss  justfile  main.scss
scss/abstracts/: _colors.scss  _functions.scss  _index.scss  _mixins.scss  _type.scss  _variables.scss
scss/atoms/: _animations.scss  _badge.scss  _button.scss  _card.scss  _container.scss  _form-controls.scss  _index.scss  _input.scss  _message.scss  _select.scss  _toggle.scss
scss/base/: _base.scss  _reset.scss
scss/components/: _advertisement.scss  _app-dependencies.scss  _app-version.scss  _badge.scss  _buy_me_coffee.scss  _chat.scss  _domain_selector.scss  _feedback-popup.scss  _gdrive-backup.scss  _index.scss  _leaderboard.scss  _logo.scss  _profile-config.scss  _profile-points.scss  _progress.scss  _rating-stars.scss  _settings.scss  _share-page.scss  _social-links.scss  _status_message.scss  _swipe.scss  _timer.scss  _video.scss
scss/components/analytics/: _average-time-taken.scss  _index.scss  _success-rate.scss
scss/components/certificates/: _achievement.scss  _achievements.scss  _certificate.scss  _certificate_image.scss  _index.scss
scss/components/challenge/: _actions.scss  _config.scss  _contextual_choice.scss  _gap-fill-result.scss  _gap-fill.scss  _index.scss  _info.scss  _informative.scss  _informative_markdown.scss  _multiple-choice-circle.scss  _multiple-choice-result.scss  _multiple-choice.scss  _options.scss  _ordering-result.scss  _ordering.scss  _placeholder.scss  (+4 more)
scss/designs/: _index.scss
scss/layouts/: _card.scss  _content.scss  _grid.scss  _horizontal.scss  _index.scss  _position.scss  _responsive.scss  _vertical.scss
scss/molecules/: _button.scss  _chat-elements.scss  _form-groups.scss  _icon-content.scss  _index.scss  _table.scss
scss/themes/: _dark.scss  _index.scss  _light.scss  _theme-classes.scss
scss/vendors/: .gitignore  _gerillass.scss  _google-fonts.scss  _index.scss  _intojs.scss
src/: app.rs  app_csr.rs  app_ssr.rs  lib.rs  main.rs  route.rs  switch_route.rs  wrapped_app.rs
src/components/: advertisement.rs  app_dependencies.rs  app_version.rs  badge.rs  buy_me_coffee.rs  challenge_config.rs  challenge_info.rs  challenge_presence.rs  challenge_rating.rs  challenge_review.rs  challenge_timer.rs  chat.rs  domain_selector.rs  feedback_popup.rs  game_path.rs  gdrive_backup.rs  inbox.rs  leaderboard.rs  logo.rs  mod.rs  music.rs  progress_bar.rs  rating_stars.rs  seo.rs  share_page.rs  social_links.rs  status_message.rs  swipe.rs  timer.rs  translate.rs  video.rs
src/effects/: blink_animation.rs  mod.rs  read_text.rs
src/i18n/: config.rs  i18n.rs  i18n_json_loader.rs  i18n_loader.rs  i18n_yml_loader.rs  mod.rs  provider.rs  selected_language.rs
src/managers/: inbox_manager.rs  mod.rs  profile_points_manager.rs
src/model/: design.rs  inbox.rs  mod.rs  session_initializer.rs  settings.rs  theme.rs
src/pages/: about.rs  example.rs  home.rs  mod.rs
src/providers/: certificates_provider.rs  client_side_router.rs  design_provider.rs  game_controller_provider.rs  inbox_provider.rs  mod.rs  profile_provider.rs  repository_context.rs  repository_hooks.rs  repository_provider.rs  session_provider.rs  settings_provider.rs  ssr_impl.rs  theme_provider.rs
src/repository/: backup.rs  certificate_repository.rs  game_state_persistence_impl.rs  gdrive_backup.rs  inbox_repository.rs  local_storage.rs  memory_storage.rs  mod.rs  profile_repository.rs  repository.rs  repository_error.rs  session_repository.rs  settings_repository.rs  storage.rs  storage_error.rs
src/ssg/: direct_renderer.rs  mod.rs  renderer.rs
src/storage/: mod.rs  profile_storage.rs
src/tools/: mod.rs  traced_request.rs
styles/: README.md  index.css  tailwind.css  vendors.css
styles/atoms/: animations.css  badges.css  button.css  cards.css  grids.css  icons.css  index.css  interactions.css  layout.css  spacing.css  states.css  surfaces.css  typography.css
styles/base/: index.css
styles/components/: advertisement.css  app_dependencies.css  app_version.css  badge.css  buy_me_coffee.css  chat.css  domain_selector.css  faq.css  feedback_popup.css  gdrive_backup.css  inbox.css  index.css  leaderboard.css  logo.css  map.css  navigation.css  profile_config.css  profile_points.css  progress.css  progress_bar.css  rating_stars.css  share_page.css  social_links.css  swipe.css  timer.css  video.css
styles/layouts/: page.css
styles/molecules/: ad-card.css  badge-group.css  button-group.css  card.css  index.css  input-field.css  list.css  media.css  navigation-item.css  progress.css  table.css
styles/templates/: challenge-layout.css  grid-layout.css  index.css  page-layouts.css  result-layout.css
styles/themes/: dark.css  light.css
styles/vendors/: index.css
tests/: i18n_completeness.rs  style_completeness.rs
(+198 files in other folders)
