[package]
name = "konnektoren-yew"
version = "0.3.3"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "konnektoren-yew-bin"
path = "src/main.rs"

[features]
default = [
    "certificates",
    "effects",
    "marketplace",
    "music",
    "storage",
    "gdrive",
    "tour",
    "solana",
]
backup = []
certificates = [
    "konnektoren-core/achievements",
    "konnektoren-core/certificates",
]
effects = ["gloo/timers", "gloo/futures"]
marketplace = ["konnektoren-core/marketplace"]
music = []
storage = ["gloo/storage"]
yew-preview = ["dep:yew-preview"]
gdrive = ["backup"]
tour = ["yew-tou-rs"]
solana = ["solana-sdk", "wallet-adapter", "spl-token"]

[dependencies]
async-trait = "0.1.83"
bincode = "1.3.3"
chrono = "0.4.38"
console_log = "1.0"
futures = "0.3"
log = "0.4.21"
implicit-clone = "0.4.9"
indexmap = "2.2.6"
gloo = { version = "0.11.0", features = ["net"] }
hex = "0.4.3"
konnektoren-core = { git = "https://github.com/konnektoren/konnektoren-rs.git", features = [
    "js",
] }
konnektoren-platform = { git = "https://github.com/konnektoren/konnektoren-rs.git" }
markdown = { version = "1.0.0-alpha.18" }
serde_json = "1.0.117"
thiserror = "2.0"
wasm-bindgen = { version = "0.2", features = ["serde"] }
wasm-bindgen-futures = { version = "0.4.42" }
web-sys = { version = "0.3.*", features = [
    "HtmlInputElement",
    "HtmlAudioElement",
    "AudioContext",
    "HtmlSelectElement",
    "Window",
    "DomTokenList",
    "DragEvent",
    "SpeechSynthesis",
    "SpeechSynthesisUtterance",
    "TouchList",
    "Touch",
    "HtmlElement",
    "HtmlMetaElement",
    "Element",
    "DomRect",
] }
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
yew-hooks = { version = "0.3.2" }
yew-preview = { git = "https://github.com/chriamue/yew-preview", optional = true }
yew-chat = { git = "https://github.com/chriamue/yew-chat", features = [
    "yew",
], default-features = false }
yew-tou-rs = { git = "https://github.com/chriamue/yew-tou-rs/", branch = "main", features = [
    "markdown",
], optional = true }
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "js"] }
urlencoding = "2.1.3"
rand = "0.8"
rust-embed = { version = "8.5.0", features = [
    "interpolate-folder-path",
    "debug-embed",
] }
anyhow = "1.0.86"
serde = { version = "1.0.204", features = ["derive"] }
js-sys = "0.3.69"
serde_yaml = "0.9.34+deprecated"
wallet-adapter = { version = "1.0.4-beta", optional = true }
solana-sdk = { version = "2.1.2", optional = true }
spl-token = { version = "7.0.0", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
tokio = { version = "1.0", features = ["rt", "macros"] }
regex = "1.5"
walkdir = "2.3"
serde_json = "1.0"
env_logger = "0.10"

[build-dependencies]
anyhow = "1.0"
vergen = { version = "9.0.0", features = ["build", "cargo", "rustc"] }
