[package]
name = "konnektoren-yew"
version = "0.5.9"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "konnektoren-yew-bin"
path = "src/main.rs"

[[bin]]
name = "konnektoren-yew-server"
path = "src/bin/server.rs"
required-features = ["server"]

[[bin]]
name = "ssg"
path = "src/bin/ssg.rs"
required-features = ["ssg"]

[[bin]]
name = "i18n-report"
path = "src/bin/i18n_report.rs"
required-features = ["tools"]

[[bin]]
name = "catalog"
path = "src/bin/catalog.rs"
required-features = ["catalog"]

[features]
default = [
    "certificates",
    "effects",
    "marketplace",
    "music",
    "storage",
    "gdrive",
    "tour",
]
backup = []
certificates = [
    "konnektoren-core/achievements",
    "konnektoren-core/certificates",
]
chat = []
effects = ["gloo/timers", "gloo/futures"]
marketplace = ["konnektoren-core/marketplace"]
music = []
storage = ["gloo/storage"]
yew-preview = ["dep:yew-preview"]
catalog = ["yew-preview", "yew-preview/catalog", "ssr"]
gdrive = ["backup"]
tour = ["yew-tou-rs"]
solana = ["solana-sdk", "wallet-adapter", "spl-token"]
sbom = ["cargo-cyclonedx"]
csr = [
    "yew/csr",
    "gloo",
    "konnektoren-core/csr",
    "web-sys",
    "js-sys",
    "wasm-bindgen",
    "yew-hooks",
    "uuid/js",
    "dep:console_log",
    "dep:wasm-bindgen-futures",
]
ssr = ["yew/ssr", "yew_router/ssg", "konnektoren-core/ssr"]
ssg = ["ssr", "yew-ssg", "yew_router/ssg", "tokio", "env_logger"]
server = ["ssr", "axum", "tokio/full"]
tools = ["konnektoren-platform/tools", "env_logger"]

[dependencies]
# Core dependencies
async-trait = "0.1"
bincode = "1"
chrono = "0.4"
console_log = { version = "1", optional = true }
futures = "0.3"
hex = "0.4"
implicit-clone = "0.4"
indexmap = "2"
log = "0.4"
markdown = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"

# WASM dependencies - aligned with konnektoren-rs
getrandom = { version = "0.3", features = ["wasm_js"] }
gloo = { version = "0.12", features = ["net"], optional = true }
js-sys = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2", optional = true, features = [
    "spans",
    "std",
    "serde",
], default-features = false }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "Document",
    "EventListener",
    "MouseEvent",
    "Node",
    "HtmlInputElement",
    "HtmlAudioElement",
    "AudioContext",
    "HtmlSelectElement",
    "Window",
    "DomTokenList",
    "DragEvent",
    "SpeechSynthesis",
    "SpeechSynthesisUtterance",
    "TouchList",
    "Touch",
    "HtmlElement",
    "HtmlMetaElement",
    "Element",
    "DomRect",
] }

# Common utilities
rand = "0.8"
regex = "1"
rust-embed = { version = "8", features = [
    "interpolate-folder-path",
    "debug-embed",
] }
strum = { version = "0.28", features = ["derive"] }
strum_macros = "0.28"
urlencoding = "2"
uuid = { version = "1", features = ["v4", "fast-rng"] }

# Yew ecosystem
yew = "0.23"
yew-hooks = { version = "0.6.3", optional = true }
yew_router = { git = "https://github.com/chriamue/yew-ssg", package = "yew-ssg-router" }
yew-ssg = { git = "https://github.com/chriamue/yew-ssg", optional = true }
yew-preview = { git = "https://github.com/chriamue/yew-preview", optional = true }
yew-chat = { git = "https://github.com/chriamue/yew-chat", features = [
    "yew",
], default-features = false }
yew-tou-rs = { git = "https://github.com/chriamue/yew-tou-rs/", branch = "main", features = [
    "markdown",
], optional = true }

# Konnektoren dependencies
konnektoren-core = { git = "https://github.com/konnektoren/konnektoren-rs.git", features = [
    "js",
] }
konnektoren-platform = { git = "https://github.com/konnektoren/konnektoren-rs.git" }

# Solana dependencies (optional, not in default)
wallet-adapter = { version = "1", optional = true }
solana-sdk = { version = "2", optional = true }
spl-token = { version = "7", optional = true }

# Server dependencies
axum = { version = "0.8", features = ["macros"], optional = true }
env_logger = { version = "0.11", optional = true }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
], optional = true }

[dev-dependencies]
konnektoren-platform = { git = "https://github.com/konnektoren/konnektoren-rs.git", features = [
    "tools",
] }
wasm-bindgen-test = "0.3"
tokio = { version = "1", features = ["rt", "macros"] }
walkdir = "2"
serde_json = "1"
env_logger = "0.11"

[build-dependencies]
anyhow = "1"
vergen = { version = "9", features = ["build", "cargo", "rustc"] }
cargo-cyclonedx = { version = "0.4", optional = true }
serde = "1"
serde_json = "1"
